Like and dislike unsetting fix on mobile, post responsivity fix

--- a/src/components/dashboard/Posts/Post/CommentsSection/CommentsSection.css
+++ b/src/components/dashboard/Posts/Post/CommentsSection/CommentsSection.css
@@ -32,6 +32,12 @@
     width: 100%;
 }
 
+@media only screen and (max-width: 320px) {
+    .post-comments-comment-input {
+        width: 70%;
+    }
+}
+
 .post-comments-post-button {
     margin-left: 5px;
     position: absolute;
